--- a/conFusion/app/menu.html
+++ b/conFusion/app/menu.html
@@ -51,6 +51,10 @@
                          <span class="label label-danger">{{dish.label}}</span>
                          <span class="badge">{{dish.price | currency}}</span></h2>
                         <p>{{dish.description}}</p>
+                        <p>{{dish.description}}</p>
+                        <p>Comment: {{dish.comment}}</p>
+                        <p>Type your comment:
+                         <input type="text" ng-model="dish.comment"></p>
                     </div>
                 </div>
             </div>
