--- a/conFusion/app/menu.html
+++ b/conFusion/app/menu.html
@@ -29,20 +29,24 @@
         <div class="row row-content" ng-controller="menuController as menuCtrl">
             <div class="col-xs-12">
                 <ul class="nav nav-tabs" role="tablist">
-                    <li role="presentation">
-                    <a
+                    <li role="presentation"
+                    ng-class="{active:menuCtrl.isSelected(1)}">
+                    <a ng-click="menuCtrl.select(1)"
                      aria-controls="all menu"
                      role="tab">The Menu</a></li>
-                    <li role="presentation">
-                    <a
+                    <li role="presentation"
+                    ng-class="{active:menuCtrl.isSelected(2)}">
+                    <a ng-click="menuCtrl.select(2)"
                      aria-controls="appetizers"
                      role="tab">Appetizers</a></li>
-                    <li role="presentation">
-                    <a
+                    <li role="presentation"
+                    ng-class="{active:menuCtrl.isSelected(3)}">
+                    <a ng-click="menuCtrl.select(3)"
                      aria-controls="mains"
                      role="tab">Mains</a></li>
-                    <li role="presentation">
-                    <a
+                    <li role="presentation"
+                    ng-class="{active:menuCtrl.isSelected(4)}">
+                    <a ng-click="menuCtrl.select(4)"
                      aria-controls="desserts"
                      role="tab">Desserts</a></li>
                 </ul>
@@ -73,6 +77,17 @@
     <script>
         var app = angular.module('confusionApp',[]);
         app.controller('menuController', function() {
+            this.tab = 1;
+
+            this.select = function(setTab) {
+                this.tab = setTab;
+
+            }
+
+            this.isSelected = function (checkTab) {
+                return (this.tab === checkTab);
+            }
+
             var dishes=[
                          {
                            name:'Uthapizza',
