--- a/conFusion/app/menu.html
+++ b/conFusion/app/menu.html
@@ -52,7 +52,7 @@
                 </ul>
                 <div class="tab-content">
                     <ul class="media-list tab-pane fade in active">
-                        <li class="media" ng-repeat="dish in menuCtrl.dishes">
+                        <li class="media" ng-repeat="dish in menuCtrl.dishes | filter:menuCtrl.filtText">
                             <div class="media-left media-middle">
                                 <a href="#">
                                 <img class="media-object img-thumbnail"
@@ -78,10 +78,19 @@
         var app = angular.module('confusionApp',[]);
         app.controller('menuController', function() {
             this.tab = 1;
+            this.filtText = '';
 
             this.select = function(setTab) {
                 this.tab = setTab;
 
+                if (setTab === 2)
+                    this.filtText = "appetizer";
+                else if (setTab === 3)
+                    this.filtText = "mains";
+                else if (setTab === 4)
+                    this.filtText = "dessert";
+                else
+                    this.filtText = "";
             }
 
             this.isSelected = function (checkTab) {
