--- a/conFusion/app/dishdetail.html
+++ b/conFusion/app/dishdetail.html
@@ -46,7 +46,11 @@
                 </ul>
             </div>
             <div class="col-xs-9 col-xs-offset-1">
-                <p>Put the comments here</p>
+                <blockquote ng-repeat="comment in dishDetailCtrl.dish.comments">
+                    <p>{{comment.rating}} Stars</p>
+                    <p>{{comment.comment}}</p>
+                    <footer>{{comment.author}}, {{comment.date | date : 'MMM. dd, yyyy'}}</footer>
+                </blockquote>
             </div>
         </div>
 
