--- a/conFusion/app/dishdetail.html
+++ b/conFusion/app/dishdetail.html
@@ -46,7 +46,8 @@
                 </ul>
             </div>
             <div class="col-xs-9 col-xs-offset-1">
-                <blockquote ng-repeat="comment in dishDetailCtrl.dish.comments">
+                <span><b>Custom Comments</b> <small style="margin-left: 10px;color: grey;">Sort by:</small> <input ng-model="orderField"></span>
+                <blockquote ng-repeat="comment in dishDetailCtrl.dish.comments | orderBy: orderField">
                     <p>{{comment.rating}} Stars</p>
                     <p>{{comment.comment}}</p>
                     <footer>{{comment.author}}, {{comment.date | date : 'MMM. dd, yyyy'}}</footer>
