--- a/conFusion/app/index.html
+++ b/conFusion/app/index.html
@@ -80,7 +80,7 @@
         </div>
     </header>
     
-    <ng-include src="'dishdetail.html'"></ng-include>
+    <ng-include src="'contactus.html'"></ng-include>
     
     <footer class="row-footer">
         <div class="container">
